src/main/default/objects/DR_Fulfillment_Request_Log__c/DR_Fulfillment_Request_Log__c.object-meta.xml
<CustomObject>
    <description>Capture Fulfillment requests sent from Client application</description>
    <label>DR Fulfillment Request Log</label>
    <nameField>
        <displayFormat>DR-Fulfillment-Req-{000000}</displayFormat>
        <label>DR Fulfillment Request Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DR Fulfillment Request Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>