src/main/default/objects/DR_Fulfillment_Request_Log__c/fields/DR_Order_Id__c.field-meta.xml
<CustomField>
    <fullName>DR_Order_Id__c</fullName>
    <description>The Digital River Order Identifier</description>
    <inlineHelpText>The Digital River Order Identifier</inlineHelpText>
    <label>DR Order Id</label>
    <length>128</length>
    <type>Text</type>
</CustomField>