src/main/default/objects/DR_Fulfillment_Request_Log__c/fields/DR_Order_State__c.field-meta.xml
<CustomField>
    <fullName>DR_Order_State__c</fullName>
    <description>The state of the Digital River order.</description>
    <inlineHelpText>The state of the Digital River order.</inlineHelpText>
    <label>DR Order State</label>
    <length>128</length>
    <type>Text</type>
</CustomField>