src/main/default/objects/DR_Fulfillment_Request_Log__c/fields/DR_OrderItem_Id__c.field-meta.xml
<CustomField>
    <fullName>DR_OrderItem_Id__c</fullName>
    <description>The Digital River Order Item Identifier</description>
    <inlineHelpText>The Digital River Order Item Identifier</inlineHelpText>
    <label>DR OrderItem Id</label>
    <length>128</length>
    <type>Text</type>
</CustomField>