src/main/default/objects/DR_Fulfillment_Request_Log__c/fields/Fulfill_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Fulfill_Quantity__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Specifies Order Item Quantity to Fulfill</description>
    <inlineHelpText>Specifies Order Item Quantity to Fulfill</inlineHelpText>
    <label>Fulfill Quantity</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>