src/main/default/objects/DR_Fulfillment_Request_Log__c/fields/OrderId__c.field-meta.xml
<CustomField>
    <fullName>OrderId__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Salesforce Order Id</description>
    <inlineHelpText>Salesforce Order Id</inlineHelpText>
    <label>Order Id</label>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>DR Fulfillment Request Logs</relationshipLabel>
    <relationshipName>DR_Fulfillment_Requests</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>