src/main/default/objects/DR_Fulfillment_Request_Log__c/fields/OrderItem_Id__c.field-meta.xml
<CustomField>
    <fullName>OrderItem_Id__c</fullName>
    <description>Salesforce Order Product Id (SF Order Item Id)</description>
    <inlineHelpText>Salesforce Order Product Id (SF Order Item Id)</inlineHelpText>
    <label>OrderItem Id</label>
    <length>128</length>
    <required>true</required>
    <type>Text</type>
</CustomField>